# tp-utils

./: .gitignore  pyproject.toml
src/tp_utils/: csv_utils.py  list_utils.py  shelf_lock.py  type_utils.py
tests/: test_csv_utils.py  test_list_utils.py  test_shelf_lock.py  test_type_utils.py
